# kubeq

./: .gitignore  README.md  concept-art.md  pyproject.toml  result.18_59_31.yaml  result.19_14_52.yaml
kubeq/: __init__.py  __main__.py  main.py  version.py
kubeq/aliases/: __init__.py  _resource.py
kubeq/attr/: field.py  kind.py  label.py
kubeq/attrs/: __init__.py  attrs.py  field.py  kind.py  label.py
kubeq/entities/: __init__.py  _db.py
kubeq/execute/: __init__.py  _construct_rdb.py  _exec_query.py
kubeq/http/: __init__.py  _logger.py
kubeq/init/: get_resource_types.py  kubernetes.py
kubeq/kube_api/: _sender.py  api-examples.md
kubeq/logging/: __init__.py  _base_source.py  _setup_logging.py  sources.py
kubeq/operators/: __init__.py  boolean_ops.py  core.py  definitions.py  kube_ops.py  kubeq_ops.py  leaf_op.py  op_base.py  op_leaf.py  operators_q.py  primitive_ops.py  query_ops.py  reduce.py  reducer.py  selector.py  value_op.py
kubeq/query/: __init__.py
kubeq/query_plan/: __init__.py  _kube_list_request.py  _make_request.py  _query_plan.py  _separate.py  api_request.py  decide.py  field_names_by_resource.py  filter.py  fixed_resource_query.py  get.py  kube_leaf_reducer.py  kube_ops.py  op_to_str.py  resource_query.py  to_kube_operator.py  union.py
kubeq/request_plan/: __init__.py  _make_request.py  _request_plan.py  _separate.py  _visualize.py
kubeq/resource/: __init__.py  _base.py  _name.py  _resource.py  _shared.py
kubeq/run_query/: decide.py  kind_query.py  kube_list_request.py  op_to_str.py  plan_builder.py  resource_query.py  separate.py
kubeq/selection/: __init__.py  _instance_selector.py  _kind_selector.py  _resource_formula.py  _selection_formula.py  _selector.py  find_containers.py  formula.py  rephrase_selectors.py  selection_formula.py  selector.py  selector_formula.py  (+2 more)
test/: __main__.py  kube_resources.py  main.py  operators.py  request_plan.py
tests/: use-stuff.py
(+260 files in other folders)
