[tool.poetry]
name = "kubeq"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "kubeq" }]
[tool.poetry.dependencies]
python = "3.13.*"
pygments = "^2.19.1"
termcolor = "^2.5.0"
kubernetes = "^32.0.0"
kr8s = "^0.20.3"
typeguard = "2.13.*"
aioreactive = "^0.20.0"

[tool.poetry.scripts]
start = "kubeq.main:start"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
